# mas-server-v2

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
config/: gunicorn.conf.py  local.toml
config/websocket/: gunicorn.conf.toml
mas/: container.py  initializer.py  mas_application.py
mas-api/: pyproject.toml  requirements.txt
mas-api/api/: api_initializer.py  mas_api_application.py
mas-api/config/: gunicorn.conf.toml  local.toml
mas-chat/: pyproject.toml  requirements.txt
mas-chat/chat/: mas_chat_application.py  mas_websocket_application.py  websocket_connection_manager.py
mas-chat/chat/controller/: script_websocket_controller.py
mas-chat/chat/dto/: script_dto.py
mas-chat/chat/entity/: script.py
mas-chat/chat/script/controller/: script_websocket_controller.py
mas-chat/chat/script/service/: script_producing_service.py
mas-chat/chat/service/: script_producing_service.py
mas-chat/chat/utils/: config.py  const.py  controller_utils.py  gunicorn_utils.py  logging_utils.py
mas-chat/config/: gunicorn.conf.toml  local.toml
mas-chat/utils/: datetime_utils.py
mas-domain/: pyproject.toml
mas-domain/config/: common.toml
mas-domain/mas/: api_initializer.py  mas_api_application.py
mas-messaging/: pyproject.toml
mas-messaging/config/: local.toml
mas-messaging/mas/: script_consumer.py
mas-messaging/messaging/: messaging_initializer.py  script_consumer.py
mas-messaging/utils/: secret_utils.py
mas/database/: database_connection.py  mysql_connection.py  (+2 more)
(+82 files in other folders)
